--- a/api_gateway/default.conf
+++ b/api_gateway/default.conf
@@ -1,5 +1,10 @@
 server {
     listen 80;
+    
+    location = / {
+        return 200 'API Gateway is up and running';
+        add_header Content-Type text/plain;
+    }
 
     location /auth/ {
         proxy_pass http://account_service:8000/;
