--- a/api_gateway/default.conf
+++ b/api_gateway/default.conf
@@ -8,8 +8,7 @@ server {
 
     location /auth/ {
         proxy_pass http://account_service:8000/;
-        # proxy_set_header Host $host;
-        proxy_set_header Host localhost;
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
