--- a/api_gateway/default.conf
+++ b/api_gateway/default.conf
@@ -1,22 +1,31 @@
+
 server {
     listen 80;
-    
+    server_name jobjourney.ddns.net;
+
+    location / {
+        return 301 https://$host$request_uri;   
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name jobjourney.ddns.net;
+
+  
+    ssl_certificate /etc/letsencrypt/live/jobjourney.ddns.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/jobjourney.ddns.net/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+   
     location = / {
         return 200 'API Gateway is up and running';
         add_header Content-Type text/plain;
     }
 
     location /auth/ {
-        proxy_pass http://account_service:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Authorization $http_authorization; 
-    }
-
-    location /jobs/ {
-        proxy_pass http://job_list_service:8001/;
+        proxy_pass http://127.0.0.1:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -24,23 +33,19 @@ server {
         proxy_set_header Authorization $http_authorization;
     }
 
+  
+    location /jobs/ {
+        proxy_pass http://127.0.0.1:8001/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Authorization $http_authorization;
+    }
 
-#     location /chat/ {
-#     proxy_pass http://message_service:8003/chat/;
-#     proxy_set_header Host $host;
-#     proxy_set_header X-Real-IP $remote_addr;
-#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#     proxy_set_header X-Forwarded-Proto $scheme;
-#     proxy_set_header Authorization $http_authorization;
-
-#     proxy_http_version 1.1;
-#     proxy_set_header Upgrade $http_upgrade;
-#     proxy_set_header Connection "upgrade";
-# }
-
-
+   
     location /chat/ {
-        proxy_pass http://message_service:8003/;
+        proxy_pass http://127.0.0.1:8003/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -50,7 +55,6 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-}
-
+    }
 }
 
